# waste_managment

./: Cargo.toml  README.md
node/: Cargo.toml
pallets/waste-management/: Cargo.toml
pallets/waste-management/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
